--- a/OREAppNew/Base.lproj/Main.storyboard
+++ b/OREAppNew/Base.lproj/Main.storyboard
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xEZ-bh-ane">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xEZ-bh-ane">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -276,7 +275,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelectionDuringEditing="YES" rowHeight="75" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="C2C-Dd-may">
-                                <rect key="frame" x="0.0" y="103" width="393" height="466"/>
+                                <rect key="frame" x="0.0" y="147" width="393" height="422"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="separatorColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
@@ -440,6 +439,13 @@
                                     <action selector="colorButtonPressed:" destination="kEQ-RU-TVF" eventType="touchUpInside" id="FNa-ag-9tF"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b1n-I0-has">
+                                <rect key="frame" x="133" y="103" width="125" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="IWS-yt-RxD"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -447,11 +453,12 @@
                             <constraint firstItem="IWS-yt-RxD" firstAttribute="trailing" secondItem="C2C-Dd-may" secondAttribute="trailing" id="600-j5-TpR"/>
                             <constraint firstItem="C2C-Dd-may" firstAttribute="leading" secondItem="IWS-yt-RxD" secondAttribute="leading" id="HvH-tP-NKH"/>
                             <constraint firstItem="IWS-yt-RxD" firstAttribute="bottom" secondItem="C2C-Dd-may" secondAttribute="bottom" constant="200" id="hc7-2p-Nga"/>
-                            <constraint firstItem="C2C-Dd-may" firstAttribute="top" secondItem="IWS-yt-RxD" secondAttribute="top" id="i5K-xz-umW"/>
+                            <constraint firstItem="C2C-Dd-may" firstAttribute="top" secondItem="IWS-yt-RxD" secondAttribute="top" constant="44" id="i5K-xz-umW"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" style="editor" id="60N-zG-IBv"/>
                     <connections>
+                        <outlet property="AttemptsRemaingLabel" destination="b1n-I0-has" id="hnE-bK-D6x"/>
                         <outlet property="myTableView" destination="C2C-Dd-may" id="CQ4-qk-ZaJ"/>
                         <outletCollection property="colorButtons" destination="HN0-IW-xdB" collectionClass="NSMutableArray" id="DKz-ee-xwP"/>
                         <outletCollection property="colorButtons" destination="6Dd-5m-eZC" collectionClass="NSMutableArray" id="8pi-FN-QFT"/>
@@ -465,7 +472,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aXn-6k-pEp" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3410" y="-606"/>
+            <point key="canvasLocation" x="3409.9236641221373" y="-606.33802816901414"/>
         </scene>
         <!--Login Screen View Controller-->
         <scene sceneID="qyw-TV-9ha">
@@ -842,7 +849,7 @@
             <objects>
                 <viewController title="EditUsername" id="wlU-Kc-noh" customClass="EditProfileViewController" customModule="OREAppNew" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8su-C7-VKs">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Edit username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KuW-Rd-XbT">
