--- a/OREAppNew/Base.lproj/Main.storyboard
+++ b/OREAppNew/Base.lproj/Main.storyboard
@@ -286,15 +286,6 @@
                                             <rect key="frame" x="0.0" y="0.0" width="393" height="75"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WdE-73-Dnq">
-                                                    <rect key="frame" x="149" y="20" width="32" height="35"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <state key="normal" title="Button"/>
-                                                    <buttonConfiguration key="configuration" style="filled" title="1"/>
-                                                    <connections>
-                                                        <action selector="tableInputButtonPressed:" destination="d1c-sJ-fgo" eventType="touchUpInside" id="jHy-tC-3XK"/>
-                                                    </connections>
-                                                </button>
                                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qoI-Rh-Qax">
                                                     <rect key="frame" x="202" y="20" width="34" height="35"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -323,10 +314,10 @@
                                                     </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DNP-S2-B42">
-                                                    <rect key="frame" x="29" y="11" width="46" height="53"/>
+                                                    <rect key="frame" x="29" y="50" width="24" height="14"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <state key="normal" title="Button"/>
-                                                    <buttonConfiguration key="configuration" style="gray" title="S"/>
+                                                    <buttonConfiguration key="configuration" style="gray"/>
                                                     <connections>
                                                         <action selector="submitButtonPressed:" destination="d1c-sJ-fgo" eventType="touchUpInside" id="d5O-Cp-dMw"/>
                                                     </connections>
@@ -347,6 +338,15 @@
                                                     <rect key="frame" x="57" y="38" width="20" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WdE-73-Dnq">
+                                                    <rect key="frame" x="148" y="20" width="32" height="35"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="filled" title="1"/>
+                                                    <connections>
+                                                        <action selector="tableInputButtonPressed:" destination="d1c-sJ-fgo" eventType="touchUpInside" id="jHy-tC-3XK"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </tableViewCellContentView>
